[tool.poetry]
name = "pytoolkit"
version = "1.0.0"
description = "pytoolkit: Personal Python package"
license = "MIT"
authors = ["aki. <mark@aur.ll.to>"]
readme = "README.md"
homepage = "https://github.com/ak110/pytoolkit"
repository = "https://github.com/ak110/pytoolkit.git"
documentation = "https://ak110-pytoolkit.readthedocs.io/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
lightgbm = {version = "*", optional = true}
pandas = {version = "*", optional = true}
polars = {version = "*", extras = ["all"], optional = true}
psutil = {version = "*", optional = true}
pyarrow = {version = "*", optional = true}
scikit-learn = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
pyfltr = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=2.4.0"
sphinx-rtd-theme = "*"

[tool.poetry.extras]
all = [
    "lightgbm",
    "pandas",
    "polars",
    "psutil",
    "pyarrow",
]

#[tool.poetry.scripts]
#tk-benchmark = "pytoolkit.bin.benchmark:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyfltr]
pyupgrade-args = ["--py310-plus"]
pylint-args = ["--jobs=4"]

[tool.isort]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
# https://pycqa.github.io/isort/docs/configuration/options.html
profile = "black"

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
target-version = ['py310']
skip-magic-trailing-comma = true

[tool.flake8]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
# https://flake8.pycqa.org/en/latest/user/configuration.html
max-line-length = 88
extend-ignore = "E203,"

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
allow_redefinition = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--showlocals -p no:cacheprovider --durations=0"
