
[tool:pytest]
addopts = --showlocals -p no:cacheprovider
filterwarnings =
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc':DeprecationWarning
    ignore:Overriding method 'to_cpu'.:DeprecationWarning
    ignore:Overriding method 'to_gpu'.:DeprecationWarning
markers =
    gpu: for avoid warning in chainercv
norecursedirs = __pycache__ .ipynb_checkpoints .mypy_cache .git docs

[flake8]
max-line-length = 128
extend-ignore = E203
exclude =
    __pycache__,
    .ipynb_checkpoints,
    .mypy_cache,
    __init__.py

[mypy]
ignore_missing_imports=1

[metadata]
name = pytoolkit
version = attr: pytoolkit.__version__
url = https://github.com/ak110/pytoolkit
author = aki.
author_email = mark@aur.ll.to
license = MIT License
license_file = LICENSE
description = pytoolkit: Personal Python package
long_description = file: README.md

[files]
package-data = pytoolkit = pytoolkit/py.typed

[options]
zip_safe = False
packages = find:
install_requires =
    albumentations
    numba
    pandas
    scikit-learn
entry_points = file: entry_points.cfg

[options.extras_require]
tensorflow = tensorflow>=2.1.0
tensorflow-gpu = tensorflow-gpu>=2.1.0
tensorflow-cpu = tensorflow-cpu>=2.1.0
